--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,10 +1,21 @@
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/carbooking
-    password: root1234
+    password: Alti@789#
     username: root
     driver-class-name: "com.mysql.jdbc.Driver"
   jpa:
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     hibernate:
       ddl-auto: update
+
+#spring:
+#  datasource:
+#    url: jdbc:h2:mem:mydb
+#    username: sa
+#    password: 
+#    driverClassName: org.h2.Driver
+#  jpa:
+#    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+#  h2:
+#    console.enabled: true
